--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,12 @@ $color-grey-dark: #777;
 $color-grey-light-1: #f7f7f7;
 $color-black: black;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+$color-tretiary-light: #2998ff;
+$color-tretiary-dark: #5643fa;
+
+
 //font
 $def-font-size: 1.6rem;
 
