--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,7 @@
 
 .btn{
 
+  &,
   &:link,
   &:visited{
     display: inline-block;
@@ -10,6 +11,12 @@
     border-radius: 100px;
     transition: all .2s;
     position:relative;
+
+    //for buttom element
+    border:none;
+    cursor:pointer;
+
+
   }
 
   &:hover{
@@ -22,7 +29,9 @@
     }
   }
 
-  &:active{
+  &:active,
+  &:focus{
+    outline:none;
     transform: translateY(-1px);
     box-shadow: 0 5px 10px rgba($color-black, .2);
   }
