--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,9 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/form";
 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
