--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,3 +29,31 @@
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 }
+.section-stories{
+  position:relative;
+  padding: 15rem 0;
+}
+
+.section-book{
+  padding: 15rem 0;
+  background-image: linear-gradient(
+                  to right bottom, rgba($color-primary-light, 0.8),
+                  rgba($color-primary-dark, 0.8));
+}
+
+.book{
+  background-image: linear-gradient(105deg,
+                                    rgba($color-white, .9) 0%,
+                                    rgba($color-white, .9) 50%,
+                                    rgba(transparent, .1) 50%),
+                                    url(../../img/nat-10.jpg);
+  background-size: 100%;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, .8);
+
+  height: 50rem;
+
+  &__form{
+    width:50%;
+    padding: 6rem;
+  }
+}
